--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -394,10 +394,13 @@ box-shadow: inset 7px 10px 12px #34374b;
 }
 
 #userIconBox {
-    /* border: solid 2px black; */
-    position: absolute;
+    border: solid 2px black;
+    /* position: absolute; */
+    padding: 0px;
+    /* padding-left: -50px; */
+    /* width: 100px; */
     margin: 0px;
-    margin-top: 15px;
+    margin-top: 0px;
     margin-left: -85px;
 }
 
