--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,31 +391,20 @@ box-shadow: inset 7px 10px 12px #34374b;
     border: solid 1px yellow;
     float: right;
     display: absolute;
-    /* margin-right: 45px; */
 }
 
 #userIconBox {
     border: solid 2px black;
     /* position: relative; */
-    /* padding: 0px; */
-    /* margin-bottom: -50px; */
-    /* padding-top: 10px; */
-    /* padding-left: -50px; */
-    /* width: 100px; */
     margin-top: auto;
     margin-bottom: 0px;
-    /* margin-left: 85px; */
 }
 
 #userIcon {
     /* border: solid 2px black; */
     cursor: pointer;
     object-fit:cover;
-    /* background-size: cover; */
-    /* width: 50%; */
-    /* height: 50%; */
-    /* border-radius: 50px; */
-    /* margin-top: 50px; */
+    margin:0;
 }
 
 #currencyColumn {
