--- a/assets/css/curr-selector.css
+++ b/assets/css/curr-selector.css
@@ -6,15 +6,15 @@ body {
 
 
 .nav-wrapper {
-  border: solid 2px green;
-  width: 200px;
+  /* border: solid 1px green; */
+  width: auto;
   text-align: center;
 }
 .sl-nav {
   display: inline;
 }
 .sl-nav ul {
-  border: solid 1px red;
+  /* border: solid 1px red; */
   margin:0;
   padding: 0;
   list-style: none;
@@ -23,7 +23,7 @@ body {
 }
 .sl-nav li {
   cursor: pointer;
-  padding-bottom:10px;
+  padding-bottom:0;
 }
 .sl-nav li ul {
   display: none;
@@ -119,7 +119,7 @@ body {
 
 @import url('https://fonts.googleapis.com/css?family=Muli');
 .nav-wrapper2 {
-  border: solid 2px green;
+  /* border: solid 1px green; */
   width: auto;
   text-align: center;
 }
@@ -127,7 +127,7 @@ body {
   display: flex;
 }
 .sl-nav2 ul {
-  border: solid 2px red;
+  /* border: solid 1px red; */
   margin:0;
   padding:0;
   list-style: none;
