viewports and content changes

--- a/assets/css/buttons.css
+++ b/assets/css/buttons.css
@@ -1,3 +1,6 @@
+/* .button {
+
+} */
 
 .aButton1 {background-image: linear-gradient(to left, rgba(90, 90, 90, 0.267) 65%, #dfdfdf  100%);}
 .aButton1 {
