footer <row> fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,13 @@ input:focus {
     border-spacing: 10px;
 }
 
+.fRow {
+    display: table;
+    width: 100%;
+    table-layout: fixed;
+    border-spacing: 10px;
+}
+
 .abRow {
     display: table;
     width: 100%;
