--- a/assets/css/buttons.css
+++ b/assets/css/buttons.css
@@ -1,6 +1,4 @@
-/* .button {
-
-} */
+/* .button is a viewport specific id */
 
 .aButton1 {background-image: linear-gradient(to left, rgba(90, 90, 90, 0.267) 65%, #dfdfdf  100%);}
 .aButton1 {
