--- a/assets/css/viewports.css
+++ b/assets/css/viewports.css
@@ -23,7 +23,10 @@
         width: 75%;
     }
     #headText {
-        font-size: 270%;
+        font-size: 43px;
+    }
+    .aHeader3 {
+        font-size: 38px;
     }
     .aHeader2 {
         font-size: 25px;
@@ -76,6 +79,98 @@
     }
 }
 
+@media screen and (max-width: 1363px) {
+    #headText {
+        font-size: 41.6px;
+    }
+    .aHeader3 {
+        font-size: 36px;
+    }
+}
+
+@media screen and (max-width: 1314px) {
+    #headText {
+        font-size: 37px;
+    }
+    .aimg7 {
+        background-size: 65%, 60%;
+        background-position: -130px -2px, 470px -2px;
+    }
+}
+
+@media screen and (max-width: 1276px) {
+    .aHeader2 {
+        font-size: 125%;
+    }
+    .aHeader3 {
+        font-size: 32px;
+    }
+    #headText {
+        font-size: 35px;
+    }
+}
+
+@media screen and (max-width: 1180px) {
+    .aHeader2 {
+        font-size: 106.25%;
+    }
+    .aHeader1 {
+        font-size: 156.25%;
+    }
+    .aColumn {
+        height: 80px;
+    }
+}
+
+@media screen and (max-width: 1168px) {
+    #headText {
+        font-size: 35px;
+    }
+}
+
+@media screen and (max-width: 1140px) {
+    .aHeader1 {
+        font-size: 143.75%;
+    }
+}
+
+@media screen and (max-width: 1119px) {
+    .button {
+        padding-left: 20px !important;
+        padding-right: 20px !important;
+        padding-bottom: 6.2px !important;
+        padding-top: 6.2px !important;
+    }
+    .aText {
+        font-size: 10px;
+    }
+}
+
+@media screen and (max-width: 1108px) {
+    .aHeader1 {
+        font-size: 131.25% !important;
+    }
+    .aHeader2 {
+        font-size: 93.75% !important;
+    }
+    #headText {
+        font-size: 33px;
+    }
+    .aimg7 {
+        background-size: 70%, 65%;
+        background-position: -160px -2px, 410px -2px;
+    }
+}
+
+@media screen and (max-width: 1041px) {
+    .aimg7 {
+        background-size: 75%, 70%;
+        background-position: -175px -2px, 380px -2px;
+    }
+    #headText {
+        font-size: 31px;
+    }
+}
 
 /* Laptop */
 @media screen and (max-width: 1024px) {
@@ -134,7 +229,7 @@
     }
     .aimg7 {
         background-size: 65%, 55%;
-        background-position: -110px -2px, 400px -2px;
+        background-position: -110px -2px, 370px -2px;
     }
     #fb {
         width: 50%;
@@ -165,157 +260,15 @@
     }
 }
 
-
-/* Tablet */
-@media screen and (max-width: 768px) {
-    .container {
-        width: 100%;
-    }
+@media screen and (max-width: 978px) {
     #headText {
-        font-size: 28px;
+        font-size: 29px;
     }
-    #searchBox {
-        display: none;
+    .aHeader3 {
+        font-size: 29px;
     }
-    .nav-wrapper {
-        width: 70px !important;
-        margin-right: 50px;
-        /* border: solid 2px red; */
-    }
-}
-
-
-/* Mobile Large*/
-@media screen and (max-width: 425px) {
-    .container {
-        width: 100%;
-    }
-    #headText {
-        font-size: 28px;
-        text-align: left;
-    }
-    .headerLeft {
-        display: none;
-    }
-    .headerRight {
-        width: 50%;
-        margin-top: 0px;
-        margin-left: 235px;
-        /* border: solid 2px black; */
-    }
-    .headerMiddle {
-        width: 255px;
-        padding-right: 30px;
-        padding-left: 10px;
-        margin-left: 0px;
-        /* border: solid 2px black; */
-    }
-    .logo {
-        width: 25%;
-        margin-top: -8px;
-    }
-    #userIcon {
-        width: 47%;
-    }
-    #userColumn{
-        margin-top: -13px;
-    }
-    .nav-wrapper {
-        width: 70px !important;
-        margin-top: -33px;
-        margin-right: 30px;
-        /* border: solid 2px red; */
-    }
-    #cc {
-        font-size: 14px !important;
-        /* border: solid 2px black; */
-    }
-    #ca {
-        font-size: 15px !important;
-        /* border: solid 2px black; */
-    }
-    .header {
-        margin-top: 20px;
-    }
-    .headerRight {
-        position: absolute;
-    }
-}
-
-
-/* Mobile M */
-@media screen and (max-width: 375px) {
-    .container {
-        width: 100%;
-    }
-    #headText {
-        font-size: 28px;
-    }
-}
-
-
-/* Mobile S */
-@media screen and (max-width: 320px) {
-    .container {
-        width: 100%;
-    }
-    #headText {
-        font-size: 28px;
-    }
-}
-
-/* ############### */
-/* All breakpoints */
-/* ############### */
-
-@media screen and (max-width: 1363px) {
-    #headText {
-        font-size: 41.6px;
-    }
-}
-
-@media screen and (max-width: 1276px) {
-    .aHeader2 {
-        font-size: 125%;
-    }
-}
-
-@media screen and (max-width: 1180px) {
-    .aHeader2 {
-        font-size: 106.25%;
-    }
-    .aHeader1 {
-        font-size: 156.25%;
-    }
-    .aColumn {
-        height: 80px;
-    }
-}
-
-@media screen and (max-width: 1140px) {
-    .aHeader1 {
-        font-size: 143.75%;
-    }
-}
-
-@media screen and (max-width: 1119px) {
-    .button {
-        padding-left: 20px !important;
-        padding-right: 20px !important;
-        padding-bottom: 6.2px !important;
-        padding-top: 6.2px !important;
-    }
-    .aText {
-        font-size: 10px;
-    }
-}
-
-@media screen and (max-width: 1108px) {
-    .aHeader1 {
-        font-size: 131.25% !important;
-    }
-    .aHeader2 {
-        font-size: 93.75% !important;
+    .aimg7 {
+        background-position: -110px -2px, 360px -2px;
     }
 }
 
@@ -337,6 +290,12 @@
     }
     .aColumn {
         height: 80px;
+    }
+}
+
+@media screen and (max-width: 915px) {
+    #headText {
+        font-size: 28px;
     }
 }
 
@@ -390,7 +349,6 @@
     }
     .aHeader3 {
         font-size: 40px;
-        letter-spacing: 1px;
     }
     .aText {
         font-size: 11px;
@@ -447,5 +405,185 @@
 @media screen and (max-width: 828px) {
     #headText {
         font-size: 34px;
+    }
+    .aHeader3 {
+        font-size: 35px;
+    }
+    .aimg7 {
+        background-position: -120px -2px, 380px -2px;
+    }
+}
+
+@media screen and (max-width: 805px) {
+    #headText {
+        font-size: 32px;
+    }
+    .aHeader3 {
+        font-size: 34px;
+    }
+}
+
+/* Tablet */
+@media screen and (max-width: 768px) {
+    .container {
+        width: 100%;
+    }
+    #headText {
+        font-size: 28px;
+    }
+    #searchBox {
+        display: none;
+    }
+    .nav-wrapper {
+        width: 70px !important;
+        margin-right: 50px;
+        /* border: solid 2px red; */
+    }
+    .aimg7 {
+        background-size: 75%, 70%;
+        background-position: -170px -2px, 370px -2px;
+    }
+    .aimg1 {
+        background-size: 35% !important;
+        background-position: 60px -27px !important;
+    }
+    .aimg2 {
+        background-size: 35% !important;
+        background-position: 60px -19px !important;
+    }
+    .aimg3 {
+        background-size: 35% !important;
+        background-position: 60px -58px !important;
+    }
+    .aimg4, .aimg5 {
+        background-size: 32% !important;
+        background-position: 65px -19px !important;
+    }
+    .aimg6 {
+        background-size: 40% !important;
+        background-position: 50px -28px !important;
+    }
+}
+
+@media screen and (max-width: 757px) {
+    #headText {
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 710px) {
+    #headText {
+        font-size: 28px;
+    }
+    .aHeader3 {
+        font-size: 31px;
+    }
+    .aNightfalls {
+        font-size: 23px !important;
+    }
+    .aDungeons {
+        font-size: 25px !important;
+    }
+    .aimg7 {
+        background-position: -150px -2px, 330px -2px;
+    }
+}
+
+@media screen and (max-width: 663px) {
+    #headText {
+        font-size: 26px;
+    }
+    .aHeader3 {
+        font-size: 28px;
+    }
+}
+
+/* Mobile Large*/
+@media screen and (max-width: 425px) {
+    .container {
+        width: 100%;
+    }
+    #headText {
+        font-size: 30px;
+        text-align: left;
+        line-height: 40px;
+    }
+    .headerLeft {
+        display: none;
+    }
+    .headerRight {
+        width: 50%;
+        margin-top: 20px;
+        margin-left: 235px;
+        /* border: solid 2px black; */
+    }
+    .headerMiddle {
+        width: 66%;
+        padding-right: 30px;
+        padding-left: 10px;
+        margin-left: 0px;
+        /* border: solid 2px black; */
+    }
+    .mid {
+        margin-top: 60px;
+    }
+    .logo {
+        width: 25%;
+        margin-top: -8px;
+    }
+    #userIcon {
+        width: 40px;
+    }
+    #userColumn{
+        margin-top: -15px;
+    }
+    .nav-wrapper {
+        width: 70px !important;
+        margin-top: -33px;
+        margin-right: 0px !important;
+        /* border: solid 2px red; */
+    }
+    #cc {
+        font-size: 14px !important;
+        /* border: solid 2px black; */
+    }
+    #ca {
+        font-size: 15px !important;
+        /* border: solid 2px black; */
+    }
+    .header {
+        margin-top: 20px;
+    }
+    .headerRight {
+        position: absolute;
+    }
+    .row {
+        display: none;
+    }
+    .aRow {
+        display: none !important;
+    }
+    .bRow {
+        display: table;
+    }
+}
+
+/* Mobile M */
+@media screen and (max-width: 375px) {
+    .container {
+        width: 100%;
+    }
+    #headText {
+        font-size: 28px;
+    }
+}
+
+/* Mobile S */
+@media screen and (max-width: 320px) {
+    .container {
+        width: 100%;
+    }
+    #headText {
+        font-size: 28px;
     }
 }
