--- a/assets/css/viewports.css
+++ b/assets/css/viewports.css
@@ -545,7 +545,12 @@
 }
 
 @media screen and (max-width: 697px) {
-    /* change footer to 2x2 grid */
+    .footer {
+        display: none;
+    }
+    .footerx3 {
+        display: block;
+    }
 }
 
 @media screen and (max-width: 663px) {
