--- a/assets/css/curr-selector.css
+++ b/assets/css/curr-selector.css
@@ -137,7 +137,7 @@ body {
   list-style: none;
   position: relative;
   display: inline-block;
-}
+}s
 .sl-nav2 li {
   cursor: pointer;
   display: flex;
