--- a/assets/css/viewports.css
+++ b/assets/css/viewports.css
@@ -874,7 +874,7 @@
     #visa {
         width: 6%;
         margin: 0;
-        margin-right: 190px;
+        margin-right: 90px;
         margin-top: -37px;
         float: right;
     }
@@ -884,6 +884,12 @@
         margin-right: 70px;
         margin-top: -65px;
         float: right;
+    }
+    .faRow {
+        margin-bottom: 20px;
+    }
+    .sRow {
+        margin-top: -20px;
     }
 }
 
@@ -1077,23 +1083,27 @@
         width: 30%;
         float: left;
         margin: 0;
+        margin-left: 60px;
     }
     #mcSecure {
         width: 20%;
         float: left;
         margin: 0;
         margin-top: 20px;
+        margin-left: 85px;
     }
     #visa {
         width: 15%;
         float: right;
         margin: 0;
+        margin-right: 60px;
     }
     #visaSecure {
-        width: 20%;
+        width: 22%;
         float: right;
         margin: 0;
         margin-top: 20px;
+        margin-right: 45px;
     }
 }
 
