--- a/assets/css/buttons.css
+++ b/assets/css/buttons.css
@@ -1,20 +1,28 @@
 /* .button is a viewport specific id */
 
+/* make background image animation */
 .aButton1 {background-image: linear-gradient(to left, rgba(90, 90, 90, 0.267) 65%, #dfdfdf  100%);}
 .aButton1 {
+    /* add border and border curve */
     border: solid 1px black;
     border-radius: 7px;
+    /* change background size */
     background-size: 200% auto;
+    /* configure size of button */
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 30px;
     padding-right: 30px;
+    /* configure the position of the button inside of the div*/
     margin-left: 150px;
     margin-right: auto;
+    /* automatically transform all text to uppercase */
     text-transform: uppercase;
+    /* change the animation duration to 0.3 seconds */
     transition-duration: 0.3s;
 }
 .aButton1:hover {
+    /* add animation when button is hovered on */
     background-position: right center;
 }
 
